--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Underground Devs</title>
-    <link rel="stylesheet " href="css/style.css ">
+
+    <title>Home</title>
 
     <link rel="stylesheet " href="bootstrap/css/bootstrap.min.css ">
     <!--nuvem-->
@@ -13,16 +13,15 @@
     <!--nuvem-->
     <link rel="stylesheet " href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic ">
     <link rel="stylesheet " href="fonts/font-awesome.min.css ">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+    <link rel="stylesheet " href="css/style.css" media="all">
 </head>
 
 <body id="page-top">
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.51);">
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.51); height: 6rem;" onmouseover="c3()">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: rgb(237,237,237);"><img src="img/underground-slogan.png" alt="" style="height: 4rem;"></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: rgb(237,237,237);"><img id='slogan' src="img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">SOBRE</a></li>
@@ -33,16 +32,16 @@
             </div>
         </div>
     </nav>
-    <header class="masthead text-center text-white d-flex" style="background-image:url('../img/space.gif');">
+    <header class="masthead text-center text-white d-flex" style="background-image:url('../img/space.gif');" onmouseover="c2()" onmouseout="c()">
         <div class="container my-auto">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
-                    <h1 class="text-uppercase"><strong>UNDERGROUND DEVS</strong></h1>
+                    <h1 class="text-uppercase">UNDERGROUND<br>DEVS</h1>
                     <hr>
                 </div>
             </div>
             <div class="col-lg-8 mx-auto">
-                <p class="text-faded mb-5" style="font-size: 25px;">Underground DEVs, atingindo suas profundezas.&nbsp;<br>Desenvolvimento sério e responsável é Underground Devs</p><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#services">Saiba mais</a></div>
+                <p class="text-faded mb-5" style="font-size: 18px;">Existem 3 formas de se resolver um problema, a correta, a errada e a XGH, que é igual à errada, só que mais rápida.<br> Extreme Go Horse de jeito responsável é Underground DEVs!</p><a class="btn btn-xl" role="button" href="#services">Saiba mais</a></div>
         </div>
     </header>
     <section id="about" class="bg-primary">
@@ -165,6 +164,7 @@
             <h2 class="mb-4">Lorem Ipsum!</h2><a class="btn btn-light btn-xl sr-button" role="button" data-aos="zoom-in" data-aos-duration="400" data-aos-once="true" href="#">Download Now!</a></div>
     </section>
     <section id="contact">
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
@@ -190,6 +190,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/creative.js"></script>
+    <script src="js/animMenu.js"></script>
 </body>
 
 </html>
