--- a/index.html
+++ b/index.html
@@ -164,24 +164,106 @@
             <h2 class="mb-4">Lorem Ipsum!</h2><a class="btn btn-light btn-xl sr-button" role="button" data-aos="zoom-in" data-aos-duration="400" data-aos-once="true" href="#">Download Now!</a></div>
     </section>
     <section id="contact">
+        <!--player de audio-->
+        <div class="single-footer-widget mail-chimp">
+            <link rel="stylesheet" href="css/AudioPlayer.css" rel="stylesheet">
+            <script src="js/AudioPlayer.js">
+            </script>
+            <div id="main">
+                <img id="imgPlayer" src="img/logo_16x9.jpg">
+                <div id="player">
+                    <div id="buttons">
+                        <button id="play" onclick="playOrPauseSong()">
+                            <img src="img/Play.png">
+                        </button>
+                    </div>
+                </div>
+                <script>
+                    var songs = ["http://stream.zeno.fm/0hx17x9nwtzuv"];
+                    var poster = ["img/Poster.jpg"];
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
-                    <hr class="my-4">
-                    <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+
+                    var fillBar = document.getElementById("fill");
+
+                    var song = new Audio();
+                    var currentSong = 0; // it point to the current song
+
+                    window.onload = playSong; // it will call the function playSong when window is load
+
+                    function playSong() {
+
+                        song.src = songs[currentSong]; //set the source of 0th song 
+
+
+
+                        song.play(); // play the song
+                    }
+
+                    function playOrPauseSong() {
+
+                        if (song.paused) {
+                            song.play();
+                            $("#play img").attr("src", "img/Pause.png");
+                        } else {
+                            song.pause();
+                            $("#play img").attr("src", "img/Play.png");
+                        }
+                    }
+
+                    song.addEventListener('timeupdate', function() {
+
+                        var position = song.currentTime / song.duration;
+
+                        fillBar.style.width = position * 100 + '%';
+                    });
+
+
+                    function next() {
+
+                        currentSong++;
+                        if (currentSong > 2) {
+                            currentSong = 0;
+                        }
+                        playSong();
+                        $("#play img").attr("src", "img/Pause.png");
+                        $("#image img").attr("src", poster[currentSong]);
+                        $("#bg img").attr("src", poster[currentSong]);
+                    }
+
+                    function pre() {
+
+                        currentSong--;
+                        if (currentSong < 0) {
+                            currentSong = 2;
+                        }
+                        playSong();
+                        $("#play img").attr("src", "img/Pause.png");
+                        $("#image img").attr("src", poster[currentSong]);
+                        $("#bg img").attr("src", poster[currentSong]);
+                    }
+                </script>
+            </div>
+            <!--fim do player de audio-->
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto text-center">
+                        <h2 class="section-heading">Let's Get In Touch!</h2>
+                        <hr class="my-4">
+                        <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-4 ml-auto text-center"><i class="fa fa-phone fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-once="true"></i>
+                        <p>123-456-6789</p>
+                    </div>
+                    <div class="col-lg-4 mr-auto text-center"><i class="fa fa-envelope-o fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-delay="300" data-aos-once="true"></i>
+                        <p><a href="mailto:underdevs.community@gmail.com">underdevs.community@gmail.com</a></p>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 ml-auto text-center"><i class="fa fa-phone fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-once="true"></i>
-                    <p>123-456-6789</p>
-                </div>
-                <div class="col-lg-4 mr-auto text-center"><i class="fa fa-envelope-o fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-delay="300" data-aos-once="true"></i>
-                    <p><a href="mailto:your-email@your-domain.com">email@example.com</a></p>
-                </div>
-            </div>
-        </div>
+
     </section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -191,6 +273,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/creative.js"></script>
     <script src="js/animMenu.js"></script>
+
+</section>
+
 </body>
 
 </html>
