--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         <p>123-456-6789</p>
                     </div>
                     <div class="col-lg-4 mr-auto text-center"><i class="fa fa-envelope-o fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-delay="300" data-aos-once="true"></i>
-                        <p><a href="mailto:underdevs.community@gmail.com">underdevs.community@gmail.com</a></p>
+                        <p><a href="https://mail.google.com/mail/u/3/?tab=wm&ogbl#inbox">underdevs.community@gmail.com</a></p>
                     </div>
                 </div>
             </div>
