--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 
     <title>Home</title>
 
-    <link rel="stylesheet " href="bootstrap/css/bootstrap.min.css ">
+    <link rel="stylesheet " href="/bootstrap/css/bootstrap.min.css">
     <!--nuvem-->
-    <link rel="stylesheet " href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800 ">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800 ">
     <!--nuvem-->
-    <link rel="stylesheet " href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic ">
-    <link rel="stylesheet " href="fonts/font-awesome.min.css ">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-    <link rel="stylesheet " href="css/style.css" media="all">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic ">
+    <link href="fonts/font-awesome.min.css ">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+    <link rel="stylesheet " href="/css/style.css" media="all">
 </head>
 
 <body id="page-top">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.51); height: 6rem;" onmouseover="c3()">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: rgb(237,237,237);"><img id='slogan' src="img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: rgb(237,237,237);"><img id='slogan' src="/img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">SOBRE</a></li>
@@ -32,7 +32,7 @@
             </div>
         </div>
     </nav>
-    <header class="masthead text-center text-white d-flex" style="background-image:url('../img/space.gif');" onmouseover="c2()" onmouseout="c()">
+    <header class="masthead text-center text-white d-flex" onmouseover="c2()" onmouseout="c()">
         <div class="container my-auto">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
