--- a/static/error/404.html
+++ b/static/error/404.html
@@ -5,26 +5,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erro 404</title>
+
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+    <!--nuvem-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800 ">
+    <!--nuvem-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic ">
+    <link href="fonts/font-awesome.min.css ">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+    <link rel="stylesheet " href="/css/style.css" media="all">
 </head>
 
-<body>
+<body id="page-top">
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.51); height: 6rem;" onmouseover="c3()">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: rgb(237,237,237);"><img id='slogan' src="/img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">SOBRE</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">BLOG</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">SERVIÇOS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">CONTATO</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <p>Erro:</p>
     <h1>404</h1>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/creative.js"></script>
+    <script src="js/animMenu.js"></script>
 </body>
 <style>
     h1 {
         font-size: 20rem;
+        position: relative;
         text-align: center;
         color: rgb(142, 15, 242);
-        line-height: 100%;
+        line-height: 0%;
     }
     
     p {
-        position: absolute;
+        position: relative;
         text-align: center;
         margin: 0px;
         top: 1rem;
-        right: 50%;
         font-size: 10rem;
     }
     
