--- a/static/about/index.html
+++ b/static/about/index.html
@@ -45,8 +45,7 @@
         <div class="container my-auto">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
-                    <h1 class="text-uppercase">UNDERGROUND<br>DEVS</h1>
-                    <hr>
+                    <img src="img/jbeekhuis_bandon.jpg" alt="imgemaleatoria">
                 </div>
             </div>
             <div class="col-lg-8 mx-auto">
