--- a/static/error/404.html
+++ b/static/error/404.html
@@ -15,12 +15,14 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
     <link rel="stylesheet " href="/css/style.css" media="all">
+    <!--icone do site-->
+    <link rel="icon" href="img/icon.png">
 </head>
 
 <body id="page-top">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.51); height: 6rem;" onmouseover="c3()">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: rgb(237,237,237);"><img id='slogan' src="/img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+            <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237);"><img id='slogan' src="/img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">SOBRE</a></li>
@@ -55,13 +57,15 @@
     p {
         position: relative;
         text-align: center;
+        color: rgb(179, 179, 179);
         margin: 0px;
         top: 5rem;
         font-size: 10rem;
     }
     
-    html {
-        background-color: rgb(175, 175, 175);
+    body {
+        background: rgb(255,255,255);
+        background: linear-gradient(0deg, rgb(192, 192, 192) 0%, rgb(0, 0, 0) 100%);
     }
 </style>
 
