[UPDATE] correcting grammar error

--- a/static/index.html
+++ b/static/index.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="col-lg-8 mx-auto">
-                <p class="text-faded mb-5" style="font-size: 18px;">Existem 3 formas de se resolver um problema, a correta, a errada e a Underground, que é igual à errada, só que mais rápida.<br><br> Extreme Go Horse de jeito responsável é <b>Underground DEVs®!</b></p><a class="btn btn-xl" role="button"
+                <p class="text-faded mb-5" style="font-size: 18px;">Existem 3 formas de se resolver um problema: a correta, a errada e a Underground, que é igual à errada, só que mais rápida.<br><br> Extreme Go Horse de jeito responsável é <b>Underground DEVs®!</b></p><a class="btn btn-xl" role="button"
                     href="#about">Saiba mais</a></div>
         </div>
     </header>
