--- a/static/about/index.html
+++ b/static/about/index.html
@@ -14,8 +14,9 @@
 
         gtag('config', 'UA-161188176-1');
     </script>
-    <title>Undergrounds</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About</title>
     <link rel="stylesheet " href="../bootstrap/css/bootstrap.min.css">
     <!--nuvem-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800 ">
