--- a/static/about/index.html
+++ b/static/about/index.html
@@ -14,8 +14,10 @@
 
         gtag('config', 'UA-161188176-1');
     </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
+
     <title>About</title>
     <link rel="stylesheet " href="../bootstrap/css/bootstrap.min.css">
     <!--nuvem-->
