[MERGE]  "master - wanghley" and "origin/master"
Merging cloflicts

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="text-center">
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -14,20 +14,26 @@
 
         gtag('config', 'UA-161188176-1');
     </script>
+
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
+    <title>Undergrounds</title>
 
-    <title>About</title>
-    <link rel="stylesheet " href="../bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet " href="/bootstrap/css/bootstrap.min.css">
     <!--nuvem-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800 ">
     <!--nuvem-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic ">
-    <link href="../fonts/font-awesome.min.css">
+    <link href="/fonts/font-awesome.min.css ">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <script href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-    <link rel="stylesheet " href="../css/style.css" media="all">
+    <script href="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <link rel="stylesheet " href="/css/style.css" media="all">
+    <!--icone do site-->
+    <link rel="icon" href="img/icon.png">
 </head>
 
 <body id="page-top">
@@ -36,7 +42,7 @@
             <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237);"><img id='slogan' src="/img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="../about/">SOBRE</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="about/">SOBRE</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">BLOG</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">SERVIÇOS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">CONTATO</a></li>
@@ -44,17 +50,138 @@
             </div>
         </div>
     </nav>
-    <header class="masthead text-center text-white d-flex" onmouseover="c2()" onmouseout="c()">
-        <div class="container my-auto">
-            <div class="row">
-                <div class="col-lg-10 mx-auto">
-                    <img src="img/jbeekhuis_bandon.jpg" alt="imgemaleatoria">
-                </div>
+    
+    <!-- Section: Team v.1 -->
+    <section class="team-section text-center" style="background-image: url('/img/space.gif');float: inline-start;">
+        <!-- Section heading -->
+        <h2 class="h1-responsive font-weight-bold my-5">Nossos Fundadores</h2>
+        <!-- Section description -->
+        <p class="grey-text w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
+        eum porro a pariatur veniam.</p>
+        <!-- Grid row -->
+        <div class="row">
+        <!-- Grid column -->
+        <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+            <div class="avatar mx-auto">
+            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle z-depth-1"
+                alt="Sample avatar">
             </div>
-            <div class="col-lg-8 mx-auto">
-            </div>
+            <h5 class="font-weight-bold mt-4 mb-3">Anna Williams</h5>
+            <p class="text-uppercase blue-text"><strong>Graphic designer</strong></p>
+            <p class="grey-text">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
+            adipisci sed quia non numquam modi tempora eius.</p>
+            <ul class="list-unstyled mb-0">
+            <!-- Facebook -->
+            <a class="p-2 fa-lg fb-ic">
+                <i class="fab fa-facebook-f blue-text"> </i>
+            </a>
+            <!-- Twitter -->
+            <a class="p-2 fa-lg tw-ic">
+                <i class="fab fa-twitter blue-text"> </i>
+            </a>
+            <!-- Instagram -->
+            <a class="p-2 fa-lg ins-ic">
+                <i class="fab fa-instagram blue-text"> </i>
+            </a>
+            </ul>
         </div>
-    </header>
+        <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+            <div class="avatar mx-auto">
+            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle z-depth-1"
+                alt="Sample avatar">
+            </div>
+            <h5 class="font-weight-bold mt-4 mb-3">John Doe</h5>
+            <p class="text-uppercase blue-text"><strong>Web developer</strong></p>
+            <p class="grey-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem ipsa accusantium
+            doloremque rem laudantium totam aperiam.</p>
+            <ul class="list-unstyled mb-0">
+            <!-- Facebook -->
+            <a class="p-2 fa-lg fb-ic">
+                <i class="fab fa-facebook-f blue-text"> </i>
+            </a>
+            <!-- Instagram -->
+            <a class="p-2 fa-lg ins-ic">
+                <i class="fab fa-instagram blue-text"> </i>
+            </a>
+            </ul>
+        </div>
+        <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-lg-3 col-md-6 mb-md-0 mb-5">
+            <div class="avatar mx-auto">
+            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle z-depth-1"
+                alt="Sample avatar">
+            </div>
+            <h5 class="font-weight-bold mt-4 mb-3">Maria Smith</h5>
+            <p class="text-uppercase blue-text"><strong>Photographer</strong></p>
+            <p class="grey-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim est fugiat nulla id eu laborum.</p>
+            <ul class="list-unstyled mb-0">
+            <!-- Facebook -->
+            <a class="p-2 fa-lg fb-ic">
+                <i class="fab fa-facebook-f blue-text"> </i>
+            </a>
+            <!-- Instagram -->
+            <a class="p-2 fa-lg ins-ic">
+                <i class="fab fa-instagram blue-text"> </i>
+            </a>
+            <!-- Dribbble -->
+            <a class="p-2 fa-lg ins-ic">
+                <i class="fab fa-dribbble blue-text"> </i>
+            </a>
+            </ul>
+        </div>
+        <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-lg-3 col-md-6">
+            <div class="avatar mx-auto">
+            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(32).jpg" class="rounded-circle z-depth-1"
+                alt="Sample avatar">
+            </div>
+            <h5 class="font-weight-bold mt-4 mb-3">Tom Adams</h5>
+            <p class="text-uppercase blue-text"><strong>Backend developer</strong></p>
+            <p class="grey-text">Perspiciatis repellendus ad odit consequuntur, eveniet earum nisi qui consectetur
+            totam officia voluptates perferendis voluptatibus aut.</p>
+            <ul class="list-unstyled mb-0">
+            <!-- Facebook -->
+            <a class="p-2 fa-lg fb-ic">
+                <i class="fab fa-facebook-f blue-text"> </i>
+            </a>
+            <!-- Github -->
+            <a class="p-2 fa-lg ins-ic">
+                <i class="fab fa-github blue-text"> </i>
+            </a>
+            </ul>
+        </div>
+        <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+  </section>
+  <!-- Section: Team v.1 -->
+
+    <script src="/js/jquery.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/js/bs-init.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script src="/js/creative.js"></script>
+    <script src="/js/animMenu.js"></script>
+
+    <!-- Footer -->
+    <footer id="footer" class="footer-1">
+        <div class="main-footer widgets-dark typo-light">
+
+                        <div class="col-md-12 text-center">
+                            <p>Copyright Underground DEVs © 2020. All rights reserved.</p>
+                        </div>
+            </div>
+    </footer>
+    <!-- Footer -->
+
 </body>
 
 </html>
