[UPDATE] change team style
Adding 5 founders in the same row

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -31,9 +31,9 @@
     <script href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
     <script href="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <link rel="stylesheet " href="/css/style.css" media="all">
+    <link rel="stylesheet " href="/about/about.css" media="all">
     <!--icone do site-->
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="/img/icon.png">
 </head>
 
 <body id="page-top">
@@ -60,12 +60,11 @@
         Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
         eum porro a pariatur veniam.</p>
         <!-- Grid row -->
-        <div class="row">
+        <div class="row text-center">
         <!-- Grid column -->
-        <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+        <div class="col-md-2">
             <div class="avatar mx-auto">
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle z-depth-1"
-                alt="Sample avatar">
+                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle z-depth-1" alt="Sample avatar">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3">Anna Williams</h5>
             <p class="text-uppercase blue-text"><strong>Graphic designer</strong></p>
@@ -88,7 +87,7 @@
         </div>
         <!-- Grid column -->
         <!-- Grid column -->
-        <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+        <div class="col-md-2">
             <div class="avatar mx-auto">
             <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle z-depth-1"
                 alt="Sample avatar">
@@ -110,7 +109,7 @@
         </div>
         <!-- Grid column -->
         <!-- Grid column -->
-        <div class="col-lg-3 col-md-6 mb-md-0 mb-5">
+        <div class="col-md-2">
             <div class="avatar mx-auto">
             <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle z-depth-1"
                 alt="Sample avatar">
@@ -136,7 +135,28 @@
         </div>
         <!-- Grid column -->
         <!-- Grid column -->
-        <div class="col-lg-3 col-md-6">
+        <div class="col-md-2">
+            <div class="avatar mx-auto">
+            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(32).jpg" class="rounded-circle z-depth-1"
+                alt="Sample avatar">
+            </div>
+            <h5 class="font-weight-bold mt-4 mb-3">Tom Adams</h5>
+            <p class="text-uppercase blue-text"><strong>Backend developer</strong></p>
+            <p class="grey-text">Perspiciatis repellendus ad odit consequuntur, eveniet earum nisi qui consectetur
+            totam officia voluptates perferendis voluptatibus aut.</p>
+            <ul class="list-unstyled mb-0">
+            <!-- Facebook -->
+            <a class="p-2 fa-lg fb-ic">
+                <i class="fab fa-facebook-f blue-text"> </i>
+            </a>
+            <!-- Github -->
+            <a class="p-2 fa-lg ins-ic">
+                <i class="fab fa-github blue-text"> </i>
+            </a>
+            </ul>
+        </div>
+
+        <div class="col-md-2">
             <div class="avatar mx-auto">
             <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(32).jpg" class="rounded-circle z-depth-1"
                 alt="Sample avatar">
@@ -174,7 +194,6 @@
     <!-- Footer -->
     <footer id="footer" class="footer-1">
         <div class="main-footer widgets-dark typo-light">
-
                         <div class="col-md-12 text-center">
                             <p>Copyright Underground DEVs © 2020. All rights reserved.</p>
                         </div>
