[UPDATE] player volume

--- a/static/index.html
+++ b/static/index.html
@@ -217,6 +217,8 @@
                                     <script>
                                         var audio = new Audio('http://stream.zeno.fm/0hx17x9nwtzuv'); // the above
                                         audio.play();
+                                        audio.pause();
+                                        audio.volume = 0.25;
                                         
                                         var slider = document.getElementById("volbar");
                                         
