--- a/static/about/index.html
+++ b/static/about/index.html
@@ -62,17 +62,28 @@
 
             <div class="profile">
                 <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
+                <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
             </div>
 
             <div class="profile">
                 <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
+                <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
+
             </div>
 
             <div class="profile">
                 <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
+                <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
+
             </div>
             <div class="profile">
                 <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
+                <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
+
             </div>
 
         </div>
