--- a/static/about/index.html
+++ b/static/about/index.html
@@ -55,7 +55,7 @@
     <section class="team-section text-center" style="background-image: url('/img/space.gif');float: inline-start;">
         <div id="team">
             <div class="profile">
-                <img src="allan.jpg" class="rounded-circle" alt="avatar">
+                <img src="img/allan.jpg" class="rounded-circle" alt="avatar">
                 <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
             </div>
