Colocando todas as fotos

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -53,36 +53,35 @@
 
     <!-- Section: Team v.1 -->
     <section class="team-section text-center" style="background-color: rgb(5, 5, 5);/*background-image: url('/img/space.gif');*/float: inline-start;">
-        
+
         <div id="team">
             <div class="profile">
-                <img src="../img/allan.jpg" class="rounded-circle" alt="avatar">
+                <img src="../img/img_avatar/allan.jpg" class="rounded-circle" alt="avatar">
                 <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
             </div>
 
             <div class="profile">
-                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
+                <img src="../img/img_avatar/eric.jpg" class="rounded-circle" alt="avatar">
+                <h3 class="font-weight-bold mt-4 mb-3">Eric Binsfeld</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
             </div>
 
             <div class="profile">
-                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
+                <img src="../img/img_avatar/kevson.png" class="rounded-circle" alt="avatar">
+                <h3 class="font-weight-bold mt-4 mb-3">Kevson Filipe</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
 
             </div>
 
             <div class="profile">
-                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
+                <img src="../img/img_avatar/wanghley.jpg" class="rounded-circle" alt="avatar">
+                <h3 class="font-weight-bold mt-4 mb-3">Wanghley Martins</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
-
             </div>
             <div class="profile">
-                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
+                <img src="../img/img_avatar/pablo.png" class="rounded-circle" alt="avatar">
+                <h3 class="font-weight-bold mt-4 mb-3">Pablo Miranda</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
 
             </div>
