correção de ordem

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -57,19 +57,19 @@
         <div id="team">
             <div class="profile">
                 <img src="../img/img_avatar/allan.jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Allan <br> Kardec</h3>
+                <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
                 <p class="font-weight-bold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
             </div>
 
             <div class="profile">
                 <img src="../img/img_avatar/eric.jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Eric <br> Binsfeld</h3>
+                <h3 class="font-weight-bold mt-4 mb-3">Eric Binsfeld</h3>
                 <p class="font-weight-bold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
             </div>
 
             <div class="profile">
                 <img src="../img/img_avatar/kevson.png" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Kevson <br> Filipe</h3>
+                <h3 class="font-weight-bold mt-4 mb-3">Kevson Filipe</h3>
                 <p class="font-weight-bold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
 
             </div>
