[UPDATE] changing organization for responsability

--- a/static/index.html
+++ b/static/index.html
@@ -57,17 +57,17 @@
                 </div>
             </div>
             <div class="col-lg-8 mx-auto">
-                <p class="text-faded mb-5" style="font-size: 18px;">Existem 3 formas de se resolver um problema: a correta, a errada e a Underground, que é igual à errada, só que mais rápida.<br><br> Extreme Go Horse de jeito responsável é <b>Underground DEVs®!</b></p><a class="btn btn-xl" role="button"
+                <p class="text-faded mb-5">Existem 3 formas de se resolver um problema: a correta, a errada e a Underground, que é igual à errada, só que mais rápida.<br><br> Extreme Go Horse de jeito responsável é <b>Underground DEVs®!</b></p><a class="btn btn-xl" role="button"
                     href="#about">Saiba mais</a></div>
         </div>
     </header>
     <section id="about" class="bg-primary">
         <div class="container">
             <div class="row">
-                <div class="col offset-lg-8 mx-auto text-center">
-                    <h2 class="text-white section-heading">O lugar onde os jedis de uma galáxia<br>distante se reúnem, cada um com sua força...<br>e juntos... fugindo do império</h2>
+                <div class="col-sm-8 offset-md mx-auto text-center">
+                    <h2 class="text-white section-heading">O lugar onde os jedis de uma galáxia distante se reúnem, cada um com sua força... e juntos... fugindo do império...</h2>
                     <hr class="light my-4">
-                    <p class="text-faded mb-4">Underground Devs é a comunidade de desenvolvedores <br>curiosos, sempre tentando construir coisas mirabolantes. <br>Nosso principal fundamento é nunca desistir!<br>Venha fazer parte!&nbsp;<br></p><a class="btn btn-light btn-xl js-scroll-trigger btn-about"
+                    <p class="text-faded mb-4 text-about">Underground Devs é a comunidade de desenvolvedores curiosos, sempre tentando construir coisas mirabolantes. Nosso principal fundamento é nunca desistir!<br>Venha fazer parte!&nbsp;<br></p><a class="btn btn-light btn-xl js-scroll-trigger btn-about"
                         role="button" href="/about">Nos conheça!</a></div>
             </div>
         </div>
