--- a/static/about/index.html
+++ b/static/about/index.html
@@ -72,7 +72,7 @@
             <div class="profile">
                 <img src="../img/img_avatar/kevson.png" class="rounded-circle" alt="avatar">
                 <h3 class="font-weight-bold mt-4 mb-3">Kevson Filipe</h3>
-                <p class="font-weight-bold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
+                <p class="font-weight-bold">Programador junior or, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
 
             </div>
 
