--- a/static/about/index.html
+++ b/static/about/index.html
@@ -52,7 +52,7 @@
     </nav>
 
     <!-- Section: Team v.1 -->
-    <section class="team-section text-center" style="background-image: url('/img/space.gif');float: inline-start;">
+    <section class="team-section text-center">
         <div class="text-center">
             <h2 style="color: seashell;font-weight: bolder;">Fundadores</h2>
         </div>
