[UPDATE] home page
changing padding top of responsive design

--- a/static/index.html
+++ b/static/index.html
@@ -57,8 +57,12 @@
                 </div>
             </div>
             <div class="col-lg-8 mx-auto">
-                <p class="text-faded mb-5">Existem 3 formas de se resolver um problema: a correta, a errada e a Underground, que é igual à errada, só que mais rápida.<br><br> Extreme Go Horse de jeito responsável é <b>Underground DEVs®!</b></p><a class="btn btn-xl" role="button"
-                    href="#about">Saiba mais</a></div>
+                <p class="text-faded mb-5">Existem 3 formas de se resolver um problema: a correta, a errada e a Underground, que é igual à errada, só que mais rápida.</p>
+                <p class="text-faded mb-5 joke">Teclado não encontrado, aperte F1 para continuar...</p>
+                <p class="text-faded mb-5 end">Extreme Go Horse de jeito responsável é <b>Underground DEVs®!<br>Não somos uma, somos A Comunidade!</b></p>
+                <a class="btn btn-xl" role="button"
+                    href="#about">Saiba mais</a>
+            </div>
         </div>
     </header>
     <section id="about" class="bg-primary">
