[UPDATE] Kevson link now working

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -80,7 +80,7 @@
             </div></a>
 
             <a href="/about/kevson-filipe"><div class="profile">
-                <a href="kevsonfilipe.html"><img src="/img/img_avatar/kevson.png" class="rounded-circle" alt="avatar"></a>
+                <img src="/img/img_avatar/kevson.png" class="rounded-circle" alt="avatar">
                 <h3 class="font-weight-bold mt-4 mb-3">Kevson Santos</h3>
                 <p class="font-weight-bold">Programador junior or, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, sunt voluptate distinctio eum ea maxime.</p>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
