[UPDATE] bug fix Kevson redirect
fixed bug of error 404 kevson page about redirect

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -64,7 +64,6 @@
             <a href="/about/allan-kardec"><div class="profile">
                 <img src="/img/img_avatar/allan.jpg" class="rounded-circle" alt="avatar">
                 <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
-                <p class="font-weight-bold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
@@ -73,16 +72,14 @@
             <a href="/about/eric-binsfeld"><div class="profile">
                 <img src="/img/img_avatar/eric.jpg" class="rounded-circle" alt="avatar">
                 <h3 class="font-weight-bold mt-4 mb-3">Eric Binsfeld</h3>
-                <p class="font-weight-bold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
             </div></a>
 
             <a href="/about/kevson-filipe"><div class="profile">
-                <a href="kevsonfilipe.html"><img src="/img/img_avatar/kevson.png" class="rounded-circle" alt="avatar"></a>
+                <img src="/img/img_avatar/kevson.png" class="rounded-circle" alt="avatar">
                 <h3 class="font-weight-bold mt-4 mb-3">Kevson Santos</h3>
-                <p class="font-weight-bold">Programador junior or, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, sunt voluptate distinctio eum ea maxime.</p>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
@@ -91,7 +88,6 @@
             <a href="/about/pablo-miranda"><div class="profile">
                 <img src="/img/img_avatar/pablo.png" class="rounded-circle" alt="avatar">
                 <h3 class="font-weight-bold mt-4 mb-3">Pablo Miranda</h3>
-                <p class="font-weight-bold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
@@ -100,7 +96,6 @@
             <a href="/about/wanghley-martins"><div class="profile">
                 <img src="/img/img_avatar/wanghley.jpg" class="rounded-circle" alt="avatar">
                 <h3 class="font-weight-bold mt-4 mb-3">Wanghley Martins</h3>
-                <p class="font-weight-bold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
