--- a/static/index.html
+++ b/static/index.html
@@ -35,15 +35,28 @@
 </head>
 
 <body id="page-top">
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.51); height: 6rem;">
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237);"><img id='slogan' src="/img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+            <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237)">
+                <img id='slogan' src="/img/underground-slogan.png" alt="">
+            </a>
+            <button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right ml-auto" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon my-toggler"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="about/">SOBRE</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="blog/">BLOG</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">SERVIÇOS</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">CONTATO</a></li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" href="about/">SOBRE</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" href="blog/">BLOG</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" href="#portfolio">SERVIÇOS</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" href="#contact">CONTATO</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -59,7 +72,7 @@
             <div class="col-lg-8 mx-auto">
                 <p class="text-faded mb-5">Existem 3 formas de se resolver um problema: a correta, a errada e a Underground, que é igual à errada, só que mais rápida.</p>
                 <p class="text-faded mb-5 joke">Teclado não encontrado, aperte F1 para continuar...</p>
-                <p class="text-faded mb-5 end">Extreme Go Horse de jeito responsável é <b>Underground DEVs®!<br>Não somos uma, somos A Comunidade!</b></p>
+                <p class="text-faded mb-5 end">Extreme Go Horse de jeito responsável é <b>Underground DEVs®!</b><br>Não somos uma, somos <b>A Comunidade!</b></p>
                 <a class="btn btn-xl" role="button"
                     href="#about">Saiba mais</a>
             </div>
